--- a/test/nonnative.yml
+++ b/test/nonnative.yml
@@ -1,1 +1,16 @@
 version: "1.0"
+log: reports/nonnative.log
+servers:
+  -
+    name: bucket
+    class: Sashactl::V1::Server
+    timeout: 1
+    port: 5678
+    log: reports/bucket.log
+    proxy:
+      kind: fault_injection
+      host: 127.0.0.1
+      port: 4567
+      log: reports/proxy_bucket.log
+      options:
+        delay: 2
