--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,16 @@ version: 2.1
 jobs:
   build-client:
     docker:
-      - image: alexfalkowski/go:2.13
+      - image: alexfalkowski/go:2.14
+      - image: localstack/localstack:4.3
+        environment:
+          SERVICES: s3
     working_directory: ~/sashactl
     steps:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
+      - run: dockerize -wait tcp://localhost:4566 -timeout 1m
       - restore_cache:
           name: restore go deps
           keys:
@@ -55,7 +59,7 @@ jobs:
     resource_class: large
   build-docker:
     docker:
-      - image: alexfalkowski/go:2.13
+      - image: alexfalkowski/go:2.14
     working_directory: ~/sashactl
     steps:
       - checkout
@@ -68,7 +72,7 @@ jobs:
     resource_class: large
   release:
     docker:
-      - image: alexfalkowski/release:3.15
+      - image: alexfalkowski/release:3.16
     working_directory: ~/sashactl
     steps:
       - checkout
@@ -79,7 +83,7 @@ jobs:
     resource_class: large
   push-docker:
     docker:
-      - image: alexfalkowski/go:2.13
+      - image: alexfalkowski/go:2.14
     working_directory: ~/sashactl
     steps:
       - checkout
