--- a/test/Gemfile
+++ b/test/Gemfile
@@ -2,7 +2,9 @@
 
 source 'https://rubygems.org'
 
+gem 'aws-sdk-s3'
 gem 'cucumber'
+gem 'nokogiri'
 gem 'nonnative'
 gem 'rspec-expectations'
 gem 'rspec-wait'
