feat(unpublish): rename from delete

--- a/test/.config/unpublish.yml
+++ b/test/.config/unpublish.yml
@@ -1,5 +1,5 @@
 articles:
-  path: reports/delete
+  path: reports/unpublish
 aws:
   accessKeyID: secrets/access_key_id
   accessKeySecret: secrets/access_key_secret
