test(article): move from reports to fixtures

--- a/test/.config/publish.yml
+++ b/test/.config/publish.yml
@@ -1,5 +1,5 @@
 articles:
-  path: reports/publish
+  path: fixtures/publish
 aws:
   accessKeyID: secrets/access_key_id
   accessKeySecret: secrets/access_key_secret
