--- a/test/.config/new.yml
+++ b/test/.config/new.yml
@@ -1,5 +1,5 @@
 articles:
-  path: reports/new
+  path: fixtures/new
 aws:
   accessKeyID: secrets/access_key_id
   accessKeySecret: secrets/access_key_secret
