--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,8 @@ jobs:
       - run: make lint
       - run: make sec
       - run: make features
-      - run: make build analyse
+      - run: make benchmarks
+      - run: make analyse
       - save_cache:
           name: save go build cache
           key: sashactl-go-build-cache-{{ checksum "go.sum" }}
