--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build-client:
     docker:
-      - image: alexfalkowski/go:2.26
+      - image: alexfalkowski/go:2.27
       - image: localstack/localstack:4.3
         environment:
           SERVICES: s3
@@ -58,22 +58,9 @@ jobs:
           path: test/reports
       - run: make codecov-upload
     resource_class: large
-  build-docker:
-    docker:
-      - image: alexfalkowski/go:2.26
-    working_directory: ~/sashactl
-    steps:
-      - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run: make build-docker
-      - run: make trivy
-    resource_class: large
   release:
     docker:
-      - image: alexfalkowski/release:3.24
+      - image: alexfalkowski/release:3.25
     working_directory: ~/sashactl
     steps:
       - checkout
@@ -82,9 +69,35 @@ jobs:
       - run: make pull
       - run: release
     resource_class: large
-  push-docker:
+  build-docker-amd64:
     docker:
-      - image: alexfalkowski/go:2.26
+      - image: alexfalkowski/go:2.27
+    working_directory: ~/sashactl
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: make platform=amd64 build-docker
+      - run: make platform=amd64 trivy-image
+    resource_class: large
+  build-docker-arm64:
+    docker:
+      - image: alexfalkowski/go:2.27
+    working_directory: ~/sashactl
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: make platform=arm64 build-docker
+      - run: make platform=arm64 trivy-image
+    resource_class: arm.medium
+  push-docker-amd64:
+    docker:
+      - image: alexfalkowski/go:2.27
     working_directory: ~/sashactl
     steps:
       - checkout
@@ -96,15 +109,50 @@ jobs:
       - run:
           name: make login
           command: echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-      - run: make push-docker
+      - run: make platform=amd64 push-docker
+    resource_class: large
+  push-docker-arm64:
+    docker:
+      - image: alexfalkowski/go:2.27
+    working_directory: ~/sashactl
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - run: make pull
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: make login
+          command: echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - run: make platform=arm64 push-docker
+    resource_class: arm.medium
+  manifest-docker:
+    docker:
+      - image: alexfalkowski/go:2.27
+    working_directory: ~/sashactl
+    steps:
+      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
+      - run: make pull
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: make login
+          command: echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - run: make manifest-docker
     resource_class: large
 
 workflows:
   sashactl:
     jobs:
       - build-client
-      - build-docker:
-          context: gh
+      - build-docker-amd64:
+          filters:
+            branches:
+              ignore: master
+      - build-docker-arm64:
           filters:
             branches:
               ignore: master
@@ -115,10 +163,25 @@ workflows:
           filters:
             branches:
               only: master
-      - push-docker:
+      - push-docker-amd64:
           context: docker
           requires:
             - release
+          filters:
+            branches:
+              only: master
+      - push-docker-arm64:
+          context: docker
+          requires:
+            - release
+          filters:
+            branches:
+              only: master
+      - manifest-docker:
+          context: docker
+          requires:
+            - push-docker-amd64
+            - push-docker-arm64
           filters:
             branches:
               only: master
