--- a/test/.config/publish.yml
+++ b/test/.config/publish.yml
@@ -13,6 +13,10 @@ aws:
 environment: development
 id:
   kind: uuid
+limiter:
+  kind: user-agent
+  tokens: 1000
+  interval: 1s
 telemetry:
   logger:
     kind: text
